--- a/style.css
+++ b/style.css
@@ -473,7 +473,8 @@ section {
 }
 .input-code {
   width: 100%;
-  max-width: 120px;
+  min-width: 200px;
+  max-width: 240px;
   padding: 10px 14px;
   font-size: 18px;
   letter-spacing: 0.2em;
