--- a/style.css
+++ b/style.css
@@ -954,6 +954,22 @@ section {
 .film-info {
   flex: 1;
   min-width: 0;
+  display: grid;
+  grid-template-columns: 1fr 200px;
+  gap: 8px 16px;
+  align-items: start;
+}
+.film-info > .film-title,
+.film-info > .film-description,
+.film-info > .film-status {
+  grid-column: 1;
+}
+.film-info > .btn-small {
+  grid-column: 2;
+  grid-row: 1 / -1;
+  align-self: end;
+  justify-self: end;
+  margin-top: 0;
 }
 .card .btn-small {
   white-space: nowrap;
