--- a/style.css
+++ b/style.css
@@ -955,17 +955,7 @@ section {
 }
 
 /* --- Cards --- */
-/* Непросмотренные, Сериалы, Последние оценки: карточки на всю ширину экрана */
-#unwatched-list.cards-list,
-#series-list.cards-list,
-#ratings-list.cards-list {
-  width: 100vw;
-  max-width: 100vw;
-  margin-left: calc(50% - 50vw);
-  box-sizing: border-box;
-  padding-left: 20px;
-  padding-right: 20px;
-}
+/* Непросмотренные, Сериалы, Последние оценки: ширина карточек по ширине контейнера (как cabinet-nav) */
 .cards-list {
   display: flex;
   flex-direction: column;
